--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <label for="t">Total time (t):</label>
                 <input type="number" id="t" name="t" step="any" required><br><br>
                 <input type="submit" value="Submit">
+                <label for = "Inter">Number of samples</label>
+                <select id = "inter"name = "inter">
+                    <option value="10">10</option>
+                    <option value="100">100</option>
+                </select><br><br>
             </form>
         </div>
         <div>
